# pyKorf

./: .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  Cooling Water Circuit-EES-IT-LT-00141.xlsx  OPTIMIZATIONS_PHASE1.md  README.md  distribute.bat  korf_automation.ipynb  launch_dev.bat  mkdocs.yml  openapi.json  pr-body-p0.md  pr-body-p2.md  pykorf.bat  pykorf.ps1  pykorf.py  pykorf_installer.py  pyproject.toml  ruff_errors.txt  schema_dump.json  test_review.py  trail.html  trail.ipynb  trail.py  trail_vis.json
.agents/skills/automation/: SKILL.md
.agents/skills/elements/: SKILL.md
.agents/skills/kdf-format/: SKILL.md
.agents/skills/model-services/: SKILL.md
.agents/skills/testing/: SKILL.md
.agents/skills/use-cases/: SKILL.md
.agents/skills/visualization/: SKILL.md
.claude/commands/: release.md
.github/: copilot-instructions.md  dependabot.yml
.github/prompts/: rewrite-notebook.prompt.md  user-workflow.prompt.md
.github/workflows/: ci.yml  dependency-update.yml  docs-deploy.yml  issue-on-failure.yml  opencode.yml  quality-check.yml  release.yml  stale-cleanup.yml
.opencode/commands/: release.md
.zed/: debug.json
config/: pms.json  stream_data.json
docs/: CHANGES_SUMMARY.md  ENTERPRISE_API.md  FLUID_CLASS.md  KDF_FORMAT.md  PMS_AND_FLUID_WORKFLOW.md  README.md  UX_IMPROVEMENT_ROADMAP.md  index.md  layout_enhancements.md
docs/about/: license.md
docs/api/: elements.md  model.md  overview.md
docs/cli/: commands.md  overview.md
docs/development/: changelog.md  contributing.md
docs/getting-started/: concepts.md  installation.md  quickstart.md
docs/includes/: abbreviations.md
docs/templates/: EXCEL_TEMPLATE_README.md
docs/user-guide/: connectivity.md  export-import.md  loading-models.md  multi-case-analysis.md  validation.md  working-with-elements.md
examples/: 01_create_pump_circuit.py  02_add_pms_from_excel.py  03_add_fluid_properties.py  04_multi_case_analysis.py  05_export_and_visualize.py  README.md  basic_usage.py  enterprise_pms_and_fluid_workflow.py  fluid_class_demo.py  generate_excel_templates.py
examples/examples/output/: pms_data.json  pump_circuit.kdf  pump_circuit_multicase.kdf  pump_circuit_with_pms.kdf
examples/output/: pump_circuit.kdf  pump_circuit_multicase.kdf  pump_circuit_with_pms.kdf
examples/output/case_data/: case_01_MIN_LOAD.json  case_comparison.md
examples/output/export/: model_data.json  report.md
pykorf/: __init__.py  __main__.py  _version.py  automation.py  cases.py  cli.py  config.py  connectivity.py  definitions.py  exceptions.py  export.py  fluid.py  layout.py  log.py  model.py  parser.py  query.py  results.py  types.py  update.py  utils.py  validation.py
pykorf/app/: __init__.py  automation.py  exceptions.py  openapi.json  project_defaults.toml  update_check.py  validation.py  whats_new.py
pykorf/app/api/: __init__.py  _logging.py  app.py  deps.py  errors.py  schemas.py  session_state.py
pykorf/app/doc_register/: __init__.py  _cols.py  db_ops.py  excel_to_db.py
pykorf/app/frontend/: .env.example  index.html  openapi-ts.config.ts  openapi.json  package-lock.json  package.json  vite.config.ts
pykorf/app/routes/: __init__.py  about.py  browse.py  bulk_copy.py  data.py  doc_register.py  file_picker.py  global_parameters.py  model_core.py  pipe_criteria.py  preferences.py  references.py  report.py
pykorf/app/static/: bulk_copy.js  global_parameters.js  pipe_criteria.js  references.js
pykorf/app/templates/: apply_data.html  base.html  file_picker.html  main_menu.html  pipe_criteria.html  preferences.html  references.html  report.html
pykorf/app/web/: helpers.py  session.py
pykorf/config/: pms.json
pykorf/core/: cases.py  exceptions.py  fluid.py  log.py  parser.py  types.py  utils.py
pykorf/core/elements/: __init__.py  base.py  check.py  compressor.py  expand.py  feed.py  gen.py  hx.py  junction.py  misc.py  orifice.py  pipe.py  pipedata.py  prod.py  pseudo.py  pump.py  symbol.py  tee.py  tools.py  valve.py  vessel.py
pykorf/core/model/: __init__.py  connectivity.py  core.py  element.py  io.py  layout.py  query.py  summary.py
pykorf/core/reports/: __init__.py  exporter.py  formatting.py  korf_parser.py  korf_reporter.py  multi_case_summary.py  reporter.py  units.json  (+4 more)
pykorf/definitions/: __init__.py  check.py  common.py  comp.py  element.py  expand.py  feed.py  gen.py  hx.py  junc.py  misc.py  orifice.py  pipe.py  pipedata.py  prod.py  pseudo.py  pump.py  symbol.py  tee.py  tools.py  valve.py  vessel.py
pykorf/docs/: KDF_FORMAT.md
pykorf/elements/: __init__.py  base.py  check.py  compressor.py  expand.py  feed.py  gen.py  hx.py  junction.py  misc.py  orifice.py  pipe.py  pipedata.py  prod.py  pseudo.py  pump.py  symbol.py  tee.py  tools.py  valve.py  vessel.py
pykorf/model/: __init__.py  connectivity.py  core.py  crud.py  export.py  io.py  layout.py  query.py  summary.py  validation.py
pykorf/reports/: __init__.py  exporter.py  sizing_criteria_gas.toml  sizing_criteria_liquid.toml  sizing_criteria_twophase.toml  unit_converter.py
pykorf/templates/: create_template.py
pykorf/trail_files/: Cooling Water Circuit-EES-IT-LT-00141.kdf  Cooling Water Circuit-EES-IT-LT-00141_processor_updated.kdf  Cooling Water Circuit-EES-IT-LT-00141_updated.kdf  Cooling Water Circuit.kdf
pykorf/use_case/: __init__.py  batch_report.py  cli.py  config.py  exceptions.py  global_parameters.py  global_settings.py  hmb.py  line_number.py  paths.py  pms.py  preferences.py  processor.py  project_defaults.toml  project_info.py  settings.py  sizing_criteria.py  tui.py
pykorf/visualization/: __init__.py  models.py  visualizer.py
site/: 404.html  index.html  objects.inv  sitemap.xml
site/search/: search_index.json
tests/: __init__.py  test_automation.py  test_batch_report.py  test_cases.py  test_connectivity.py  test_dataframe.py  test_definitions.py  test_doc_register.py  test_elements.py  test_korf_reporter.py  test_layout.py  test_model_api.py  test_parser.py  test_security.py  test_use_case.py  test_utils.py  test_validation.py  test_visualization.py  test_web.py  test_whats_new.py
(+172 files in other folders)
