[build-system]
requires = ["setuptools>=68", "wheel", "setuptools-scm>=8"]
build-backend = "setuptools.build_meta"

[project]
name = "pykorf"
dynamic = ["version"]
description = "Enterprise Python toolkit for reading, editing and writing KORF hydraulic model files (.kdf)"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
authors = [
    { name = "pyKorf Contributors" },
]
keywords = [
    "korf",
    "hydraulic",
    "simulation",
    "pipeline",
    "fluid",
    "engineering",
    "kdf",
    "process",
    "pump",
    "valve",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Manufacturing",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Physics",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
]

dependencies = [
    "pydantic>=2.0,<3.0",
    "typing-extensions>=4.5.0",
    "structlog>=24.0",
]

[project.optional-dependencies]
automation = [
    "pywinauto>=0.6.9",
    "pywin32>=311",
]
visualization = [
    "pyvis>=0.3",
    "networkx>=3.0",
]
dataframe = [
    "pandas>=2.0",
    "openpyxl>=3.1",
]
export = [
    "pyyaml>=6.0",
    "orjson>=3.9",
]
cli = [
    "click>=8.0",
    "rich>=13.0",
]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "pytest-asyncio>=0.21",
    "pytest-xdist>=3.0",
    "mypy>=1.5",
    "ruff>=0.1.0",
    "pre-commit>=3.0",
    "mkdocs>=1.5",
    "mkdocs-material>=9.0",
    "mkdocstrings[python]>=0.23",
]
all = [
    "pykorf[automation,visualization,dataframe,export,cli]",
]

[project.scripts]
pykorf = "pykorf.cli:main"

[project.urls]
Homepage = "https://github.com/pykorf/pykorf"
Documentation = "https://pykorf.readthedocs.io"
Repository = "https://github.com/pykorf/pykorf"
Issues = "https://github.com/pykorf/pykorf/issues"
Changelog = "https://github.com/pykorf/pykorf/blob/main/CHANGELOG.md"

[tool.setuptools]
packages = ["pykorf"]
include-package-data = true

[tool.setuptools.package-data]
pykorf = ["library/*.kdf", "library/*.lib", "library/*.csv", "py.typed"]

[tool.setuptools_scm]
write_to = "pykorf/_version.py"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short --strict-markers"
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "unit: marks tests as unit tests",
    "automation: marks tests that require KORF GUI automation",
]
asyncio_mode = "auto"

[tool.coverage.run]
source = ["pykorf"]
omit = [
    "tests/*",
    "pykorf/automation.py",
    "pykorf/_version.py",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]

[tool.mypy]
python_version = "3.10"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = false
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
implicit_reexport = false
show_error_codes = true
show_column_numbers = true
pretty = true

[[tool.mypy.overrides]]
module = ["pywinauto.*", "win32gui.*", "win32con.*"]
ignore_missing_imports = true

[tool.ruff]
target-version = "py310"
line-length = 100
indent-width = 4

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # Pyflakes
    "I",   # isort
    "N",   # pep8-naming
    "D",   # pydocstyle
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "SIM", # flake8-simplify
    "TCH", # flake8-type-checking
    "TID", # flake8-tidy-imports
    "Q",   # flake8-quotes
    "FLY", # flynt
    "PERF",# perflint
    "RUF", # Ruff-specific rules
]
ignore = [
    "D100",  # Missing docstring in public module
    "D104",  # Missing docstring in public package
    "D105",  # Missing docstring in magic method
    "D107",  # Missing docstring in __init__
    "D203",  # 1 blank line required before class docstring (conflicts with D211)
    "D212",  # Multi-line docstring summary should start at the first line (conflicts with D213)
]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.isort]
known-first-party = ["pykorf"]
combine-as-imports = true

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"
