[build-system]
requires = ["setuptools>=68", "wheel", "setuptools-scm>=8"]
build-backend = "setuptools.build_meta"

[project]
name = "pykorf"
dynamic = ["version"]
description = "Enterprise Python toolkit for reading, editing and writing KORF hydraulic model files (.kdf)"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
authors = [
    { name = "pyKorf Contributors" },
]
keywords = [
    "korf",
    "hydraulic",
    "simulation",
    "pipeline",
    "fluid",
    "engineering",
    "kdf",
    "process",
    "pump",
    "valve",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Manufacturing",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Physics",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
]

dependencies = [
    "pydantic>=2.0,<3.0",
    "typing-extensions>=4.5.0",
    "structlog>=24.0",
    "pyvis>=0.3",
    
    "networkx>=3.0",
    "pandas>=2.0",
    "openpyxl>=3.1",
    "pyyaml>=6.0",
    "orjson>=3.9",
    "rich>=13.0",
    "textual>=1.0",
    "appdirs>=1.4",
    "pyperclip>=1.8",
]

[project.optional-dependencies]
all = [
    "pykorf",
]

[project.scripts]
pykorf = "pykorf.cli:main"

[project.urls]
Homepage = "https://github.com/pykorf/pykorf"
Documentation = "https://pykorf.readthedocs.io"
Repository = "https://github.com/pykorf/pykorf"
Issues = "https://github.com/pykorf/pykorf/issues"
Changelog = "https://github.com/pykorf/pykorf/blob/main/CHANGELOG.md"

[tool.uv]
default-groups = ["dev", "docs"]

[dependency-groups]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "pytest-asyncio>=0.21",
    "pytest-xdist>=3.0",
    "mypy>=1.5",
    "ruff>=0.1.0",
    "pre-commit>=3.0",
    "jupyter>=1.0",
    "notebook>=7.0",
    "ipykernel>=6.0",
]
docs = [
    "mkdocs>=1.6",
    "mkdocs-material>=9.5,<9.7",
    "mkdocstrings[python]>=0.25",
    "mkdocs-minify-plugin>=0.8",
    "mkdocs-git-revision-date-localized-plugin>=1.2",
    "mkdocs-git-committers-plugin-2>=2.3",
    "mkdocs-redirects>=1.2",
    "pymdown-extensions>=10.8",
    "mkdocs-awesome-pages-plugin>=2.9",
]

automation = ["pywinauto>=0.6.9", "pywin32>=311"]

[tool.setuptools]
packages = ["pykorf"]
include-package-data = true

[tool.setuptools.package-data]
pykorf = ["library/*.kdf", "library/*.lib", "library/*.csv", "py.typed"]

[tool.setuptools_scm]
write_to = "pykorf/_version.py"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short --strict-markers"
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "unit: marks tests are unit tests",
    "automation: marks tests that require KORF GUI automation",
]
asyncio_mode = "auto"

[tool.coverage.run]
source = ["pykorf"]
omit = [
    "tests/*",
    "pykorf/automation.py",
    "pykorf/_version.py",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]

[tool.mypy]
python_version = "3.10"
# === Balanced Strict Type Checking ===
# Not "strict = true" - more practical for real-world code

# Core type safety (important - keep these on)
# Note: These are disabled to avoid excessive annotation requirements
disallow_untyped_defs = false       # Don't require annotations everywhere
disallow_incomplete_defs = false    # Allow partial type annotations
no_implicit_optional = true         # Require explicit Optional[X]
check_untyped_defs = true           # Check bodies of untyped functions

# Relaxed settings (reduce noise)
warn_return_any = false             # Allow returning Any (too strict)
warn_unreachable = false            # Can be noisy with complex conditionals
warn_redundant_casts = false        # Casts are often intentional
disallow_untyped_decorators = false # Decorators often lack types
implicit_reexport = true            # Allow implicit re-exports
disallow_untyped_calls = false      # Allow calling untyped functions

# Disabled error codes (too pedantic for this codebase)
disable_error_code = [
    "no-redef",         # Conditional class definitions
    "literal-required", # Field alias with constants
    "assignment",       # Literal type inference issues
    "union-attr",       # None checking with union types
    "unused-ignore",    # Type: ignore comments
    "arg-type",         # Argument type compatibility (too strict)
    "index",            # Index operations on unions
    "attr-defined",     # Dynamic attribute access
    "misc",             # Miscellaneous strict checks
]

# Error display
show_error_codes = true
show_column_numbers = true
pretty = true

# Ignore missing imports for libraries without stubs
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = [
    "pywinauto.*",
    "win32gui.*", 
    "win32con.*", 
    "win32process.*",
    "yaml",
    "tomllib",
    "tomli_w",
]
ignore_missing_imports = true

[tool.ruff]
target-version = "py310"
line-length = 100
indent-width = 4
exclude = ["pykorf/_version.py"]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # Pyflakes
    "I",   # isort
    "N",   # pep8-naming
    "D",   # pydocstyle
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "SIM", # flake8-simplify
    "TCH", # flake8-type-checking
    "TID", # flake8-tidy-imports
    "Q",   # flake8-quotes
    "FLY", # flynt
    "PERF",# perflint
    "RUF", # Ruff-specific rules
]
ignore = [
    "D100",  # Missing docstring in public module
    "D104",  # Missing docstring in public package
    "D105",  # Missing docstring in magic method
    "D107",  # Missing docstring in __init__
    "D102",  # Missing docstring in public method
    "D203",  # 1 blank line required before class docstring (conflicts with D211)
    "D212",  # Multi-line docstring summary should start at the first line (conflicts with D213)
    "N802",  # Function name should be lowercase - allow unit suffixes like kPag, kW
    "D415",  # First line should end with period - too pedantic
    "N818",  # Exception name should end with Error - existing names are fine
    "PERF401",  # Use list comprehension - performance micro-optimization
    "PERF403",  # Use dict comprehension - performance micro-optimization
    "SIM102",  # Combine if statements - sometimes clearer separated
    "SIM105",  # Use contextlib.suppress - preference
    "SIM108",  # Use ternary operator - sometimes clearer as if-else
    "TC001",  # Move import into type-checking block - complex refactoring
    "TC002",  # Move third-party import into type-checking block - complex
    "TC003",  # Move standard library import into type-checking block - complex
    "TC004",  # Move import out of type-checking block - complex
    "RUF012",  # Mutable default values - ClassVar is acceptable
    "RUF015",  # Prefer next(iter()) over single element slice - preference
    "RUF059",  # Unused unpacked variables - often intentional
    "B007",  # Unused loop variable - can be intentional
    "B039",  # Mutable ContextVar default - acceptable pattern
    "B904",  # Raise with from - requires careful exception chaining
    "C414",  # Unnecessary list() call within sorted() - minor
    "UP006",  # Use tuple instead of Tuple - handled by type checking blocks
    "UP035",  # typing.X deprecated - handled by type checking blocks
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["D101", "D102", "D103", "F841", "F821"]
"pykorf/_version.py" = ["ALL"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.isort]
known-first-party = ["pykorf"]
combine-as-imports = true

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"
